assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Oswald:wght@200&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

.page-container {
    position: relative;
    min-height: 100%;
}

body {
    font-family: Josefin-Sans, sans-serif;
    color: #121211;
    background-color: #ECE6DF;
    width: 100%;
    left: 0;
    bottom: 0;
}

/* logo and header */

header {
    background-color: #0a0a09;
    width: 100%;
}

h1 {
    text-transform: uppercase;
    font-family: Josefin-Sans, sans-serif;
    color: #ECE6DF;
    padding: 2%;
    margin: 0;
}

.logo {
    text-align: center;
    font-size: 250%;
    text-decoration: none;
}

header>a {
    text-decoration: none;
}

/*menu*/
.menu {
    font-size: 120%;
    display: inline-block;
    width: 100%;
    text-align: center;
}

.menu li {
    list-style-type: none;
    float: right;
    width: 25%;
    text-align: center;
    padding: 0 1% 0 1%;
    text-align: justify;
}

nav>.menu>.home {

    display: inline;
}

nav>.menu>.gallery {

    display: inline;
}

nav>.menu>.signup-form {

    display: inline;
}

.menu a {
    text-decoration: none;
    color: #ECE6DF;

}

.menu a:hover {
    color: #9E6061;
}

.active {
    border-bottom: 3px solid #9E6061;
}

/*main image*/
.menu-break {
    width: 100%;
    height: 5%;
    background-color: #ECE6DF;
}

.images {
    clear: both;
    display: inline-block;
}

.image-one>img {
    width: 50%;
    height: auto;
    border-radius: 3%;
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 5%;
}

.section-break {
    width: 100%;
    height: 5%;
}

/*footer*/

.footer {
    background-color: #000000;
    position: fixed;
    max-height: 10%;
    bottom: 0;
    width: 100%;

}

.footer-icons {
    text-align: center;
    font-size: 150%;
}

.footer-icons>li {
    display: inline-block;
    width: 20%;
}

.footer-icons i {
    color: #ECE6DF;
    font-size: 130%;
    width: 100%;
    margin: 0;
    padding: 5%;
}

/*main page text*/
.heading {
    margin: 0 auto;
    width: 100%;

}

.heading>i {
    color: #121211;
}

.heading #text-heading {
    text-align: center;
    color: #121211;
    font-size: 150%;
}

.text {
    margin: 0 auto;
    width: 50%;
}

.text p {
    text-align: center;
    color: #121211;
    font-size: 150%;
    font-weight: bold;
}

.heading>.text-heading {
    color: #070707;
    margin: 0 auto;
    font-size: 170%;
    text-align: center;
}

.heading-break {
    width: 100%;
    height: 10%;
}

.text-heading {
    font-size: large;
    text-transform: uppercase;
    padding: 2%;

}

/*break between main text and "Opening times"*/
.second-text-break {
    height: 30px;
    width: 100%;
}

/*table*/

td {
    margin: 0 auto;
    border: 2px solid #000000;
    border-collapse: collapse;
    font-weight: bold;
    padding: 3%;
    width: 30%;
    text-align: center;
}

tr {
    width: 30%;
    font-size: 150%;
}

table {
    width: 30%;
    margin: 0 auto;
    border-spacing: 0;
    margin-bottom: 10%;
}

.times {
    text-align: center;
    text-transform: uppercase;
    font-size: 170%;
}

.times-break {
    width: 100%;
    height: 20px;
}

.footer-break {
    width: 100%;
    height: 20px;
}

/*form*/

form {
    background-color: #ECE6DF;
    padding: 0 0 10% 0;
}

.signup-heading {
    text-transform: capitalize;
    text-align: center;
    top: 5%;
    padding: 3%;
    font-size: 170%;

}

.signup {
    text-align: center;
    font-size: x-large;
}

label {
    box-sizing: border-box;
    border: 3px solid #070707;
    background-color: #FFFFFF;
    display: list-item;
    list-style: none;
    width: 25%;
    height: 15%;
    float: left;
    margin-left: 23%;
    border-radius: 8px;
    font-weight: bold;
}

input {
    box-sizing: border-box;
    border: 3px solid #070707;
    background-color: #FFFFFF;
    display: list-item;
    list-style: none;
    width: 25%;
    height: 15%;
    float: right;
    margin-right: 23%;
    border-radius: 8px;
}

.type {
    height: 34px;
    text-align: center;
    font-size: large;
}

/*breaks between rows of the form*/
.form-break {
    width: 70%;
    height: 30px;
}

input:hover {
    border: 3px solid #070707;
    background-color: #9492908a;
}

/*submit button*/
.join-button {
    width: 30%;
    height: 40px;
    border-radius: 8px;
    border: 3px solid #070707;
    background-color: #FFFFFF;
    font-size: 100%;
    font-weight: bold;

}

.center>.join-button {
    text-align: center;
    justify-content: center;
    display: flex;
    left: 35%;
    right: 35%;
    margin: 0 auto;
    position: absolute;
}

.join-button:hover {
    background-color: #68CB7A;
    border: 3px solid #0A0909;
    margin: 0 auto;
    justify-content: center;
}

/*confirmation page following the signup sheet*/
.confirmation>h1 {
    margin-bottom: 0;
}

.confirmation-container {
    padding: 0;
    margin: 0;
}

.confirmation {
    padding: 0;
    margin: 0;
}

.confirmation {
    font-size: 200%;
    color: #070707;
    text-align: center;
    margin: 15% 0 15% 0;
}

/*gallery*/

.gallery-heading {
    text-align: center;
    color: #121211;
    font-size: 200%;
}

/*images on first row*/
.row-1 img {
    width: 80%;
    display: inline-flex;
    border-radius: 8px;
    box-shadow: 10px 10px 10px 0 #212121;
}

.container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    row-gap: 5%;
}

.container2 {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    row-gap: 5%;
    margin-bottom: 10%;
}

/*images on second row*/
.row-2 img {
    width: 80%;
    display: inline-flex;
    border-radius: 8px;
    box-shadow: 10px 10px 10px 0 #212121;
}

.left-image {
    margin: 0 3% 3% 20%;
}

.right-image {
    margin: 0 20% 3% 3%;
}

/*Media queries*/

/* For larger to medium screens size from 1200px wide and down */

@media screen and (max-width: 1200px) {

    .photographs-main {
        width: 100%;
    }


    .photographs-main>.image-one {
        width: 30%;
        height: 95%;
        text-align: justify;
        padding-bottom: 5%;
        margin-top: 50%;
    }

    .heading {
        padding: 7% 2% 3% 0;
        text-align: center;
    }

    .text>p {
        font-size: 120%;
        text-align: center;
    }

    table {
        width: 60%;
        margin-bottom: 10%;
    }

    td {
        font-size: 80%;
    }

    .form {
        padding-bottom: 5%;
        padding-top: 5%;
    }

    .confirmation-container {
        padding: 5%;
    }

    .confirmation-container>h2 {
        padding: 10% 0 10% 0;
    }

    .footer {
        position: fixed;
    }

}

/* for medium screen sizes from 735px wide and down */
@media screen and (max-width: 735px) {
    .signup>label {
        width: 30%;
        margin: 0 1% 0 15%
    }

    .signup>input {
        width: 30%;
        margin: 0 15% 1% 0;
    }

    .signup {
        margin-bottom: 30%;
    }

    .text>p {
        text-align: center;
    }

    .table {
        margin-bottom: 10%;
    }

    .footer {
        position: fixed;
    }

    .menu>li {
        padding: 0 4% 0 4%;
        margin: 0;
        text-align: center;
    }

}

/* for medium screen sizes from 620px wide and down */
@media screen and (max-width: 620px) {
    .signup>label {
        width: 35%;
        margin: 0 0 0 10%
    }

    .signup>input {
        width: 35%;
        margin: 0 10% 0 0;
    }

    .signup {
        margin-bottom: 30%;
    }

    .images {
        margin-top: 10%
    }

    .text>p {
        text-align: center;
    }

    .menu>li {
        padding: 0 4% 0 4%;
        margin: 0;
        text-align: center;
    }


    .table {
        margin-bottom: 10%;
    }

    .footer {
        position: fixed;
    }
}

/*for small screen sizes from 576px wide and down*/
@media (max-width: 576px) {

    .image-one>img {
        width: 70%;
        height: auto;
        margin-right: 15%;
        margin-left: 15%;
        margin-top: 1%;
    }

    .text>p {
        text-align: center;
    }

    table {
        width: 90%;
    }

    .footer {
        position: fixed;
    }

    .signup {
        font-size: medium;
    }

    label {
        padding: 1% 0 1% 0;
    }

    table {
        margin-bottom: 10%;
    }

    .menu>li {
        padding: 0 4% 0 4%;
        margin: 0;
        text-align: center;
    }

    .logo {
        font-size: 180%;
    }
}

